2005-08-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-chunksize): Improve docstring.

2005-08-07  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.50 released.

	* tramp.el: Remove defvar of `last-coding-system-used' in the
	XEmacs case; not necessary anymore.
	(tramp-handle-set-visited-file-modtime)
	(tramp-handle-insert-file-contents)
	(tramp-handle-write-region): No special handling for
	`last-coding-system-used, because this is done in
	`tramp-accept-process-output' now.
	(tramp-accept-process-output): New defun.
	(tramp-process-one-action, tramp-process-one-multi-action)
	(tramp-wait-for-regexp, tramp-wait-for-output)
	(tramp-discard-garbage-erase-buffer): Call it.  Reported by David
	Howells <dhowells@redhat.com>.
	(clear-visited-file-modtime): Defadvice removed.  The check for
	unset buffer's modtime does not need to be based on
	`tramp-buffer-file-attributes'.  Suggested by RMS.

	* tramp-smb.el: Remove defvar of `last-coding-system-used' in the
	XEmacs case; not necessary anymore.
	(tramp-smb-handle-write-region): No special handling for
	`last-coding-system-used, because this is done in
	`tramp-accept-process-output' now.
	(tramp-smb-wait-for-output): Call `tramp-accept-process-output'.

2005-08-01  Thien-Thi Nguyen  <ttn@gnu.org>

	Update years in copyright notice.

2005-07-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-message): Insert "\n" if not being at beginning
	of line.
	(tramp-find-shell): Use `tramp-barf-if-no-shell-prompt' for code
	sequence with same logic.

2005-07-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-user-regexp): Allow "@" as part of user name.

2005-07-21  Juanma Barranquero  <lekktu@gmail.com>

	* tramp.el (tramp-handle-load): Fix typo in error message.

2005-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-handle-expand-file-name): Discard call
	of `tramp-drop-volume-letter'.  It is not necessary, and there